--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "My Remotion video",
 	"scripts": {
 		"start": "remotion preview src/index.tsx",
-		"build": "remotion render src/index.tsx Hello out.mp4",
+		"build": "remotion render src/index.tsx Hello out.mp4 --overwrite --concurrency=1",
 		"upgrade": "remotion upgrade",
 		"server": "ts-node server.tsx",
 		"test": "eslint 'src' --ext ts,tsx,js,jsx && tsc"
@@ -12,10 +12,10 @@
 	"repository": {},
 	"license": "UNLICENSED",
 	"dependencies": {
-		"@remotion/bundler": "^1.0.0",
-		"@remotion/cli": "^1.0.0",
-		"@remotion/eslint-config": "^1.0.0",
-		"@remotion/renderer": "^1.0.0",
+		"@remotion/bundler": "1.4.0-alpha.c6377c08",
+		"@remotion/cli": "1.4.0-alpha.c6377c08",
+		"@remotion/eslint-config": "1.4.0-alpha.c6377c08",
+		"@remotion/renderer": "1.4.0-alpha.c6377c08",
 		"@types/express": "^4.17.9",
 		"@types/react": "^17.0.0",
 		"eslint": "^7.15.0",
@@ -23,7 +23,8 @@
 		"prettier": "^2.2.1",
 		"prettier-plugin-organize-imports": "^1.1.1",
 		"react": "^17.0.1",
-		"remotion": "^1.0.0",
+		"react-is": "^17.0.1",
+		"remotion": "1.4.0-alpha.c6377c08",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.1.3"
 	}
