--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "remotion-template",
+	"name": "@pierreminiggio/youtube-likes-recap-video-maker",
 	"version": "1.0.0",
 	"description": "My Remotion video",
 	"scripts": {
