--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@pierreminiggio/youtube-likes-recap-video-maker",
+	"name": "remotion-template",
 	"version": "1.0.0",
 	"description": "My Remotion video",
 	"scripts": {
@@ -7,25 +7,25 @@
 		"build": "remotion render src/index.tsx Hello out.mp4 --overwrite",
 		"upgrade": "remotion upgrade",
 		"server": "ts-node server.tsx",
-		"test": "eslint 'src' --ext ts,tsx,js,jsx && tsc"
+		"test": "eslint src --ext ts,tsx,js,jsx && tsc"
 	},
 	"repository": {},
 	"license": "UNLICENSED",
 	"dependencies": {
-		"@remotion/bundler": "1.4.0-alpha.cb57b7a8",
-		"@remotion/cli": "1.4.0-alpha.cb57b7a8",
-		"@remotion/eslint-config": "1.4.0-alpha.cb57b7a8",
-		"@remotion/renderer": "1.4.0-alpha.cb57b7a8",
+		"@remotion/bundler": "^2.0.0",
+		"@remotion/cli": "^2.0.0",
+		"@remotion/eslint-config": "^2.0.0",
+		"@remotion/renderer": "^2.0.0",
 		"@types/express": "^4.17.9",
 		"@types/react": "^17.0.0",
 		"eslint": "^7.15.0",
 		"express": "^4.17.1",
 		"prettier": "^2.2.1",
 		"prettier-plugin-organize-imports": "^1.1.1",
-		"react": "^17.0.1",
-		"react-is": "^17.0.1",
-		"remotion": "1.4.0-alpha.cb57b7a8",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"remotion": "^2.0.0",
 		"ts-node": "^9.1.1",
-		"typescript": "^4.1.3"
+		"typescript": "^4.2.3"
 	}
 }
