--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "My Remotion video",
 	"scripts": {
 		"start": "remotion preview src/index.tsx",
-		"build": "remotion render src/index.tsx Hello out.mp4 --overwrite",
+		"build": "remotion render src/index.tsx Hello out.mp4 --overwrite --bundle-cache=false",
 		"upgrade": "remotion upgrade",
 		"server": "ts-node server.tsx",
 		"test": "eslint src --ext ts,tsx,js,jsx && tsc"
