--- a/.github/workflows/render-video.yml
+++ b/.github/workflows/render-video.yml
@@ -1,14 +1,10 @@
 on:
   workflow_dispatch:
     inputs:
-      titleText:
-        description: "Which text should it say?"
+      likes:
+        description: "Likes"
         required: true
         default: "Welcome to Remotion"
-      titleColor:
-        description: "Which color should it be in?"
-        required: true
-        default: "black"
 name: Render video
 jobs:
   render:
@@ -20,7 +16,8 @@ jobs:
       - run: sudo apt update
       - run: sudo apt install ffmpeg
       - run: npm i
-      - run: npm run build -- --props="$WORKFLOW_INPUT"
+      - run: echo "$WORKFLOW_INPUT" > likes.json
+      - run: npm run build"
         env:
           WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
       - uses: actions/upload-artifact@v2
