--- a/.github/workflows/render-video.yml
+++ b/.github/workflows/render-video.yml
@@ -17,10 +17,12 @@ jobs:
       - run: sudo apt install ffmpeg
       - run: npm i
       - run: echo $WORKFLOW_INPUT
-      - run: echo $WORKFLOW_INPUT > likes.json
-      - run: npm run build"
         env:
           WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
+      - run: echo $WORKFLOW_INPUT > likes.json
+        env:
+          WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
+      - run: npm run build"
       - uses: actions/upload-artifact@v2
         with:
           name: out.mp4
