--- a/.github/workflows/render-video.yml
+++ b/.github/workflows/render-video.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-node@main
       - run: sudo apt update
       - run: sudo apt install ffmpeg
-      - run: npm install -g npm@latest
+      - run: sudo npm install -g npm@latest
       - run: npm i
       - run: echo $WORKFLOW_INPUT
         env:
