--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
-.idea
 node_modules
 dist
 .DS_Store
-out.mp4
+
+# Ignore the output video from Git but not videos you import into src/.
+*.mp4
+!src**/*.mp4
+*.mp3
+!src**/*.mp3
+*.webm
+!src**/*.webm
+*.aac
+!src**/*.aac
+*.wav
+!src**/*.wav
+
+.idea
 likes.json
