--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
 	"editor.tabSize": 2,
-	"java.configuration.updateBuildConfiguration": "disabled",
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"editor.codeActionsOnSave": {
-		"source.organizeImports": false,
-		"source.fixAll": true
+		"source.organizeImports": "never",
+		"source.fixAll": "explicit"
 	},
 	"typescript.enablePromptUseWorkspaceTsdk": true
 }
