--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
 	"repository": {},
 	"license": "UNLICENSED",
 	"dependencies": {
-		"@remotion/bundler": "^2.0.0",
-		"@remotion/cli": "^2.0.0",
-		"@remotion/eslint-config": "^2.0.0",
-		"@remotion/renderer": "^2.0.0",
+		"@remotion/bundler": "4.0.217",
+		"@remotion/cli": "4.0.217",
+		"@remotion/eslint-config": "4.0.217",
+		"@remotion/renderer": "4.0.217",
 		"@types/express": "^4.17.9",
-		"@types/react": "^17.0.0",
-		"eslint": "^7.15.0",
+		"@types/react": "^18.0.26",
+		"eslint": "^8.30.0",
 		"express": "^4.17.1",
 		"prettier": "^2.2.1",
-		"prettier-plugin-organize-imports": "^1.1.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"remotion": "^2.0.0",
-		"ts-node": "^9.1.1",
+		"prettier-plugin-organize-imports": "^3.2.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"remotion": "4.0.217",
+		"ts-node": "^10.9.1",
 		"typescript": "^4.2.3"
 	}
 }
